[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podpilot"
version = "0.2.0"
description = "Autopilot for RunPod GPU infrastructure — smart GPU selection, one-command provisioning, cost tracking, beautiful terminal output."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["runpod", "gpu", "cloud", "machine-learning", "infrastructure", "pod-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "runpod>=1.7.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/anmol/podpilot"
Documentation = "https://github.com/anmol/podpilot#readme"
Issues = "https://github.com/anmol/podpilot/issues"

[tool.setuptools.packages.find]
where = ["."]
